Added link to secured site and text which one is changing after sign in :)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,14 @@
 
 <p class="notice"><%= notice %></p> <p class="alert"><%= alert %></p>
 
+<p>
+<% if user_signed_in? %>
+Witaj, <%= current_user.name %>
+<% else %>
+Jesteś niezalogowany.
+<% end %>
+</p>
+
 <%= yield %>
 
 </body>
